// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Componenti/Progress Indicators Bottone con Progress Bar 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="container"
    >
      <div
        className="row"
      >
        <div
          className="col-12 col-sm-6"
        >
          <p>
            <strong>
              Bottone primario
            </strong>
          </p>
          <button
            aria-label={null}
            className="btn-progress btn btn-primary disabled"
            disabled={true}
            onClick={[Function]}
          >
            Label bottone
             
            <svg
              className="icon icon-light"
              style={
                Object {
                  "ariaHidden": true,
                }
              }
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2a10 10 0 00-3.16 19.49c.5.09.68-.22.68-.48v-1.7C6.73 19.91 6.14 18 6.14 18A2.69 2.69 0 005 16.5c-.91-.62.07-.61.07-.61a2.13 2.13 0 011.53 1 2.14 2.14 0 002.91.83 2.16 2.16 0 01.63-1.34c-2.14-.21-4.52-1.07-4.52-4.9a3.89 3.89 0 011-2.69 3.57 3.57 0 01.1-2.64s.84-.27 2.75 1a9.63 9.63 0 015 0c1.91-1.29 2.75-1 2.75-1 .37.835.405 1.78.1 2.64a3.89 3.89 0 011 2.69c0 3.84-2.34 4.68-4.57 4.93.482.49.73 1.164.68 1.85v2.75c0 .33.18.58.69.48A10 10 0 0012 2z"
              />
            </svg>
            <span>
              <div
                className="progress"
              >
                <div
                  className="progress-bar-label"
                >
                  <span
                    className="sr-only"
                  />
                </div>
                <div
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="50"
                  className="progress-bar"
                  role="progressbar"
                  style={
                    Object {
                      "width": "50%",
                    }
                  }
                />
              </div>
            </span>
          </button>
        </div>
        <div
          className="col-12 col-sm-6"
        >
          <p>
            <strong>
              Bottone secondario
            </strong>
          </p>
          <button
            aria-label={null}
            className="btn-progress btn btn-secondary disabled"
            disabled={true}
            onClick={[Function]}
          >
            Label bottone
             
            <svg
              className="icon icon-light"
              style={
                Object {
                  "ariaHidden": true,
                }
              }
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2a10 10 0 00-3.16 19.49c.5.09.68-.22.68-.48v-1.7C6.73 19.91 6.14 18 6.14 18A2.69 2.69 0 005 16.5c-.91-.62.07-.61.07-.61a2.13 2.13 0 011.53 1 2.14 2.14 0 002.91.83 2.16 2.16 0 01.63-1.34c-2.14-.21-4.52-1.07-4.52-4.9a3.89 3.89 0 011-2.69 3.57 3.57 0 01.1-2.64s.84-.27 2.75 1a9.63 9.63 0 015 0c1.91-1.29 2.75-1 2.75-1 .37.835.405 1.78.1 2.64a3.89 3.89 0 011 2.69c0 3.84-2.34 4.68-4.57 4.93.482.49.73 1.164.68 1.85v2.75c0 .33.18.58.69.48A10 10 0 0012 2z"
              />
            </svg>
            <span>
              <div
                className="progress"
              >
                <div
                  className="progress-bar-label"
                >
                  <span
                    className="sr-only"
                  />
                </div>
                <div
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="50"
                  className="progress-bar"
                  role="progressbar"
                  style={
                    Object {
                      "width": "50%",
                    }
                  }
                />
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Progress Indicators Colori 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="mb-3"
      >
        <div
          className="progress-color progress"
        >
          <div
            className="progress-bar-label"
          >
            <span
              className="sr-only"
            />
          </div>
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="25"
            className="progress-bar bg-success"
            role="progressbar"
            style={
              Object {
                "width": "25%",
              }
            }
          />
        </div>
      </div>
      <div
        className="mb-3"
      >
        <div
          className="progress-color progress"
        >
          <div
            className="progress-bar-label"
          >
            <span
              className="sr-only"
            />
          </div>
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="33"
            className="progress-bar bg-info"
            role="progressbar"
            style={
              Object {
                "width": "33%",
              }
            }
          />
        </div>
      </div>
      <div
        className="mb-3"
      >
        <div
          className="progress-color progress"
        >
          <div
            className="progress-bar-label"
          >
            <span
              className="sr-only"
            />
          </div>
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="50"
            className="progress-bar bg-warning"
            role="progressbar"
            style={
              Object {
                "width": "50%",
              }
            }
          />
        </div>
      </div>
      <div
        className="mb-3"
      >
        <div
          className="progress-color progress"
        >
          <div
            className="progress-bar-label"
          >
            <span
              className="sr-only"
            />
          </div>
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="66"
            className="progress-bar bg-danger"
            role="progressbar"
            style={
              Object {
                "width": "66%",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Progress Indicators Esempi 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="mb-3"
      >
        <div
          className="progress"
        >
          <div
            className="progress-bar-label"
          >
            <span
              className="sr-only"
            />
          </div>
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="0"
            className="progress-bar"
            role="progressbar"
            style={
              Object {
                "width": "0%",
              }
            }
          />
        </div>
      </div>
      <div
        className="mb-3"
      >
        <div
          className="progress"
        >
          <div
            className="progress-bar-label"
          >
            <span
              className="sr-only"
            />
          </div>
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="25"
            className="progress-bar"
            role="progressbar"
            style={
              Object {
                "width": "25%",
              }
            }
          />
        </div>
      </div>
      <div
        className="mb-3"
      >
        <div
          className="progress"
        >
          <div
            className="progress-bar-label"
          >
            <span
              className="sr-only"
            />
          </div>
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="50"
            className="progress-bar"
            role="progressbar"
            style={
              Object {
                "width": "50%",
              }
            }
          />
        </div>
      </div>
      <div
        className="mb-3"
      >
        <div
          className="progress"
        >
          <div
            className="progress-bar-label"
          >
            <span
              className="sr-only"
            />
          </div>
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="75"
            className="progress-bar"
            role="progressbar"
            style={
              Object {
                "width": "75%",
              }
            }
          />
        </div>
      </div>
      <div
        className="mb-3"
      >
        <div
          className="progress"
        >
          <div
            className="progress-bar-label"
          >
            <span
              className="sr-only"
            />
          </div>
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="100"
            className="progress-bar"
            role="progressbar"
            style={
              Object {
                "width": "100%",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Progress Indicators Esempi interattivi 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="progress-bar-wrapper"
      >
        <div
          className="progress-bar-label"
        >
          <span
            className="sr-only"
          >
            progresso
          </span>
          25%
        </div>
        <div
          className="progress"
        >
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow={25}
            className="progress-bar"
            role="progressbar"
            style={
              Object {
                "width": "25%",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Progress Indicators Etichette 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="progress-bar-wrapper"
      >
        <div
          className="progress-bar-label"
        >
          <span
            className="sr-only"
          >
            progresso
          </span>
          35%
        </div>
        <div
          className="progress"
        >
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="35"
            className="progress-bar"
            role="progressbar"
            style={
              Object {
                "width": "35%",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Progress Indicators Progresso Indeterminato 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="progress-indeterminate progress"
    >
      <div
        className="progress-bar-label"
      >
        <span
          className="sr-only"
        >
          In elaborazione...
        </span>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        className="progress-bar"
        role="progressbar"
        style={
          Object {
            "width": "undefined%",
          }
        }
      />
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Progress Indicators.Spinners Spinner 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="container"
    >
      <div
        className="row"
      >
        <div
          className="col-6 col-lg-3"
        >
          <p
            className="mb-3"
          >
            <strong>
              Spinner standard
            </strong>
          </p>
          <span
            className="progress-spinner"
          >
            <span
              className="sr-only"
            >
              Caricamento...
            </span>
          </span>
        </div>
        <div
          className="col-6 col-lg-3"
        >
          <p
            className="mb-3"
          >
            <strong>
              Spinner Attivo
            </strong>
          </p>
          <span
            className="progress-spinner-active progress-spinner"
          >
            <span
              className="sr-only"
            >
              Caricamento...
            </span>
          </span>
        </div>
        <div
          className="col-6 col-lg-3 mt-3 mt-lg-0"
        >
          <p
            className="mb-3"
          >
            <strong>
              Small
            </strong>
          </p>
          <span
            className="size-sm progress-spinner"
          >
            <span
              className="sr-only"
            >
              Caricamento...
            </span>
          </span>
        </div>
        <div
          className="col-6 col-lg-3 mt-3 mt-lg-0"
        >
          <p
            className="mb-3"
          >
            <strong>
              Small attivo
            </strong>
          </p>
          <span
            className="progress-spinner-active size-sm progress-spinner"
          >
            <span
              className="sr-only"
            >
              Caricamento...
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Progress Indicators.Spinners Spinner Doppio 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="container"
    >
      <div
        className="row"
      >
        <div
          className="col-6 col-lg-3"
        >
          <p
            className="mb-3"
          >
            <strong>
              Spinner doppio
            </strong>
          </p>
          <span
            className="progress-spinner-double progress-spinner"
          >
            <div
              className="progress-spinner-inner"
            />
            <div
              className="progress-spinner-inner"
            />
            <span
              className="sr-only"
            >
              Caricamento...
            </span>
          </span>
        </div>
        <div
          className="col-6 col-lg-3"
        >
          <p
            className="mb-3"
          >
            <strong>
              Doppio attivo
            </strong>
          </p>
          <span
            className="progress-spinner-active progress-spinner-double progress-spinner"
          >
            <div
              className="progress-spinner-inner"
            />
            <div
              className="progress-spinner-inner"
            />
            <span
              className="sr-only"
            >
              Caricamento...
            </span>
          </span>
        </div>
        <div
          className="col-6 col-lg-3 mt-3 mt-lg-0"
        >
          <p
            className="mb-3"
          >
            <strong>
              Doppio small
            </strong>
          </p>
          <span
            className="size-sm progress-spinner-double progress-spinner"
          >
            <div
              className="progress-spinner-inner"
            />
            <div
              className="progress-spinner-inner"
            />
            <span
              className="sr-only"
            >
              Caricamento...
            </span>
          </span>
        </div>
        <div
          className="col-6 col-lg-3 mt-3 mt-lg-0"
        >
          <p
            className="mb-3"
          >
            <strong>
              Doppio small attivo
            </strong>
          </p>
          <span
            className="progress-spinner-active size-sm progress-spinner-double progress-spinner"
          >
            <div
              className="progress-spinner-inner"
            />
            <div
              className="progress-spinner-inner"
            />
            <span
              className="sr-only"
            >
              Caricamento...
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
